# llm-wiki

./: AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-20-llm-wiki-tool.md  2026-04-22-figure-aware-paper-ingestion.md
docs/superpowers/specs/: 2026-04-20-llm-wiki-tool-design.md  2026-04-22-figure-aware-paper-ingestion-design.md
examples/tiny-research/: README.md
llm_wiki/: cli.py
llm_wiki/templates/default/: AGENTS.md  index.md
templates/default/: AGENTS.md  log.md  overview.md
tests/: test_cli.py
