[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki"
version = "0.1.0"
description = "A local template and CLI for LLM-maintained markdown wikis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
llm-wiki = "llm_wiki.cli:main"

[tool.setuptools.packages.find]
include = ["llm_wiki*"]

[tool.setuptools.package-data]
llm_wiki = [
    "templates/default/AGENTS.md",
    "templates/default/raw/.gitkeep",
    "templates/default/wiki/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
